--- a/_posts/2022-12-26-firefox.md
+++ b/_posts/2022-12-26-firefox.md
@@ -4,6 +4,8 @@ title: 我的主力浏览器——Firefox
 tags: Firefox
 ---
 
+# 我的主力浏览器——Firefox
+
 Firefox在2022年末的测试中速度超过Google Chrome.(数据来源：少数派)
 
 但Google Chrome仍然站市场份额的60%以上.
