--- a/_posts/2023-02-08-mcbugik.md
+++ b/_posts/2023-02-08-mcbugik.md
@@ -4,6 +4,8 @@ title: 解决部分Inter显卡老旧无法启动Minecraft问题
 tags: Minecraft
 ---
 
+# 解决部分Inter显卡老旧无法启动Minecraft问题
+
 本文专指*Minecraft:Java*
 
 -------------------
@@ -15,6 +17,7 @@ tags: Minecraft
 如果显卡驱动已是最新，那么可以尝试更换Java版本，一般使用JDK8u51就行了(题外话:尽量使用JDK，不要用JRE，否则Mod加载出问题)，JDK8u51以下版本也行
 
 如果还是不行，采用最后的办法，换系统。
+
 > Minecraft是用Java启动的，也就是可以跨平台运行，由于Linux的兼容性高，所以我这边使用CentOS或Ubuntu可以运行Minecraft，使用Windows 7也可以运行。Windows 10淘汰了老硬件(存疑)，所以对老旧硬件的兼容性没有Windows 7好。
 
 有一次，我Windows 10重装Windows 10，Windows版本不变，安装JDK8u321，可以运行Minecraft。
