--- a/_posts/2023-03-05-firefox.md
+++ b/_posts/2023-03-05-firefox.md
@@ -4,6 +4,8 @@ title: (转)为什么我们最终抛弃 Chromium 选择了 Firefox ？
 tags: Firefox
 ---
 
+# 为什么我们最终抛弃 Chromium 选择了 Firefox ？
+
 CSDN原文：[https://zhuanlan.zhihu.com/p/99234523](https://zhuanlan.zhihu.com/p/99234523)
 
 --------------------
