--- a/_posts/2023-04-24-msiedel.md
+++ b/_posts/2023-04-24-msiedel.md
@@ -4,6 +4,8 @@ title: 微软：我们去除了大部分的IE，但保留了一部分
 tags: 随笔
 ---
 
+# 微软：我们去除了大部分的IE，但保留了一部分
+
 不知道几年前，Internet Explorer 被微软植入到了Windows 98中。
 
 以操作系统的市场优势来与网景的浏览器“宣战”。
