--- a/_posts/2023-02-21-redstone.md
+++ b/_posts/2023-02-21-redstone.md
@@ -4,6 +4,8 @@ title: Minecraft红石火把的控制
 tags: Minecraft
 ---
 
+# Minecraft红石火把的控制
+
 ![示意图](https://s2.loli.net/2023/02/21/PHVxAUqbutMK8Fk.jpg)
 
 红石火把会被另一个红石信号关掉，可以达到控制开关的效果。
