--- a/_posts/2022-12-26-firefox.md
+++ b/_posts/2022-12-26-firefox.md
@@ -6,77 +6,75 @@ tags: Firefox
 
 # 我的主力浏览器——Firefox
 
-Firefox在2022年末的测试中速度超过Google Chrome.(数据来源：少数派)
+Firefox在2022年末的测试中速度超过Google Chrome。(数据来源：少数派)
 
-但Google Chrome仍然站市场份额的60%以上.
+但Google Chrome仍然站市场份额的60%以上。
 
 # 为什么不是Chrome?
 
-那就要说说Chrome和Firefox的区别了.
+那就要说说Chrome和Firefox的区别了。
 
-**Chrome虽然速度快.但它内存占用率高.**
+**Chrome虽然速度快。但它内存占用率高。**
 
-- 均为最新稳定版本的Chrome、Firefox.
+- 均为最新稳定版本的Chrome、Firefox。
 - 打开相同的网站同样十秒钟
-- Chrome的内存占用是Firefox的1.5倍.
+- Chrome的内存占用是Firefox的1.5倍。
 - 极大的拖慢了我低配电脑的速度(但其实使用时没有什么大体差异)
 
-**再说说Firefox的缺点.**
+**再说说Firefox的缺点。**
 
-- 均为最新稳定版本的Chrome、Firefox.
+- 均为最新稳定版本的Chrome、Firefox。
 - 只要打开的网站超过30个
 - Firefox占用的GPU远高于Chrome
 - 甚至拖慢了Chrome的渲染速度(?)
 
-之所以是Firefox,是因为我是进行前端开发的,本来配置就不高,打开个VSCode就占用20%内存了,还要打开浏览器实时查看效果.内存占用都30%了,我在运行点别的,卡的很.
+之所以是Firefox，是因为我是进行前端开发的，本来配置就不高，打开个VSCode就占用20%内存了，还要打开浏览器实时查看效果。内存占用都30%了，我在运行点别的，卡的很。
 
-因为做前端是一个网页一个网页做,每次只打开一个界面,这是的Firefox就占用很少,Chrome是它的1.3倍左右.
+因为做前端是一个网页一个网页做，每次只打开一个界面，这是的Firefox就占用很少，Chrome是它的1。3倍左右。
 
-而且Firefox的插件虽然不如Chrome的多,但Chrome装插件是要科V学P上N网的,只能使用第三方插件网站,安全性没有保证.
-
-并且对于Chrome的安全问题已经在之前的文章中指出了: [详见此处]({% include relative %}{% post_url 2022-12-25-chromepasswdq %})
+而且Firefox的插件虽然不如Chrome的多，但Chrome装插件是要科学上网的，只能使用第三方插件网站，安全性没有保证。
 
 ### 为什么不是Microsoft Edge
 
-Microsoft Edge简称Edge.
+Microsoft Edge简称Edge。
 
 这个问题是基于Chrome安装插件需要魔法的问题提出的
 
-Edge安装插件不需要魔法,内存占用也比Chrome少了不少(但还是Firefox占用最少).
+Edge安装插件不需要魔法，内存占用也比Chrome少了不少(但还是Firefox占用最少)。
 
-其实Edge的缺点显而易见,我如果是Windows 10,我会选择Edge的,但因为某种原因我是Windows 7(具体看技术TAG里面的“为什么是Windows 7”),本来是Linux系统安装不了Edge,Windows 7对Edge的兼容性不如Windows 10,而且Google Chrome也放弃了对Windows 7的支持.而就在昨天,我的Firefox更新了一次！
+其实Edge的缺点显而易见，我如果是Windows 10，我会选择Edge的，但因为某种原因我是Windows 7，本来是Linux系统安装不了Edge，Windows 7对Edge的兼容性不如Windows 10，而且Google Chrome也放弃了对Windows 7的支持。而就在昨天，我的Firefox更新了一次！
 
-而且Firefox注重隐私,安全性更高(个人感受,Firefox通行证比Google账号安全多了)
+而且Firefox注重隐私，安全性更高
 
 ## 为什么不是QQ等国产浏览器
 
-因为国产浏览器太流氓,不是弹窗就是广告,一个浏览器的广告和弹窗都比我家门口的电线杆上的广告多了.
+因为国产浏览器太流氓，不是弹窗就是广告，一个浏览器的广告和弹窗都比我家门口的电线杆上的广告多了。
 
-而且都是Chromium内核,就不能换换口味?而且对于Chrome的安全问题我往期的文章“[关于Google Chrome等相同内核浏览器把破解密钥存放在本地的看法]({% include relative %}{% post_url 2022-12-25-chromepasswdq %})”也提过,其实没有什么大问题,但毕竟也是问题,对于心理上,还是Firefox更安心(其实当时只考虑到了以上两点.)
+而且都是Chromium内核，就不能换换口味？
 
-> 顺便一提Opera、Edge、Chrome、Brave、Yandex、搜狗、星愿、360极速、2345、云起、QQ、猎豹等浏览器全都是Chromium内核(Opera是打不过投奔的),Firefox是Gecko内核.
+> 顺便一提Opera、Edge、Chrome、Brave、Yandex、搜狗、星愿、360极速、2345、云起、QQ、猎豹等浏览器全都是Chromium内核(Opera是打不过投奔的)，Firefox是Gecko内核。
 
 ## 从开发者的角度看
 
-让一家内核垄断市场是不好的,如果没有Firefox那Google Chrome就会是以前的IE,不怎么更新,但是用户也别无选择!
+让一家内核垄断市场是不好的，如果没有Firefox那Google Chrome就会是以前的IE，不怎么更新，但是用户也别无选择！
 
-守住Firefox不但是对市场的帮助,也促进了Google更好的、用更多精力去开发Google Chrome!
+守住Firefox不但是对市场的帮助，也促进了Google更好的、用更多精力去开发Google Chrome！
 
 --------------
 
 总结
 
-- Firefox比Chrome占用少,装插件方便;
+- Firefox比Chrome占用少，装插件方便;
 - Firefox比Edge更加支持Windows 7;
 - Firefox更加安全;
-- 保护市场.
+- 保护市场。
 
-只要Firefox还是Gecko内核,我就永远支持Firefox,但不代表我反对Chromium内核.
+只要Firefox还是Gecko内核，我就永远支持Firefox，但不代表我反对Chromium内核。
 
 -----------------
 
-个人观点,仅供参考.
+个人观点，仅供参考。
 
 -------------
 
-{{ site.ccbync }}
+{{ site。ccbync }}
