--- a/_posts/2022-12-28-yearend.md
+++ b/_posts/2022-12-28-yearend.md
@@ -10,7 +10,7 @@ tags: 官方
 > 此条文符合: 子沉Blog条文命名规范(GS2)
 > 此条文符合: 子沉年终总结执行标准(YS2)
 
-这是第一个年度总结.
+这是第一个年度总结。
 
 ---------------
 
@@ -26,11 +26,11 @@ Pillar的官网
 制作子沉工作室官方网站
 ```
 
-其中在2021年的“子沉工作室官方网站”的原储存库因为某种原因被删除,只能重新制作
+其中在2021年的“子沉工作室官方网站”的原储存库因为某种原因被删除，只能重新制作
 
 今年11月份前几乎没有工作
 
-今年,累计提交300±10次.(因为可能会出现后几天提交的情况)
+今年，累计提交300±10次。(因为可能会出现后几天提交的情况)
 
 今年的语言使用情况表(从多到少排列)
 
@@ -50,18 +50,18 @@ Pillar的官网
 - 加强对开源项目的开发
 - 积极维护网站运行(被墙我也没办法)
 - 减少Gitee方面的活动(除同步项目外)
-- 在2023年1月初停止对Software Tamplate项目的维护,设置为只读项目,供他人Fork.
-- 在2023年1月初停止对Jekyll Theme项目的维护.
-- 开发Release Tamplate项目.
+- 在2023年1月初停止对Software Tamplate项目的维护，设置为只读项目，供他人Fork。
+- 在2023年1月初停止对Jekyll Theme项目的维护。
+- 开发Release Tamplate项目。
 - 增加BiliBili平台的活动频率
 - 预计停止C项目的开发
-- 增加Java项目的开发.
+- 增加Java项目的开发。
 
 ---------
 
 ### 愿景
 
-希望新的一年不要太累.
+希望新的一年不要太累。
 
 希望2023年的语言使用情况表如下(从多到少排列)
 
