整理标签&修改文章错误

--- a/_posts/2022-12-26-firefox.md
+++ b/_posts/2022-12-26-firefox.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: 我的主力浏览器——Firefox
-tags: Firefox
+tags: Firefox 原创
 ---
 
 # 我的主力浏览器——Firefox
@@ -77,4 +77,4 @@ Edge安装插件不需要魔法，内存占用也比Chrome少了不少(但还是
 
 -------------
 
-{{ site。ccbync }}
+{{ site.ccbync }}
