--- a/_posts/2022-12-28-yearend.md
+++ b/_posts/2022-12-28-yearend.md
@@ -14,17 +14,15 @@ tags: 官方
 
 ---------------
 
-###今年业绩
+### 今年业绩
 
 今年完成了
 
-```
-制作开源软件发行模版
-制作一个关于自己的储存库
-Pillar的官网
-制作一个Jekyll模版
-制作子沉工作室官方网站
-```
+- 制作开源软件发行模版
+- 制作一个关于自己的储存库
+- Pillar的官网
+- 制作一个Jekyll模版
+- 制作子沉工作室官方网站
 
 其中在2021年的“子沉工作室官方网站”的原储存库因为某种原因被删除，只能重新制作
 
