--- a/_posts/2023-03-05-firefox.md
+++ b/_posts/2023-03-05-firefox.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: (转)为什么我们最终抛弃 Chromium 选择了 Firefox ？
-tags: Firefox
+title: 为什么我们最终抛弃 Chromium 选择了 Firefox ？
+tags: Firefox 转载
 ---
 
 # 为什么我们最终抛弃 Chromium 选择了 Firefox ？
